--- a/build.gradle
+++ b/build.gradle
@@ -74,3 +74,7 @@ publishing {
 		// retrieving dependencies.
 	}
 }
+
+loom {
+    accessWidenerPath = file("src/main/resources/slightlybettersplashes.accesswidener")
+}
