--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,8 +1,8 @@
 [versions]
 # The latest versions are available at https://lambdaurora.dev/tools/import_quilt.html
-minecraft = "1.19.4"
-quilt_mappings = "1.19.4+build.10"
-quilt_loader = "0.18.10"
+minecraft = "1.20.1"
+quilt_mappings = "1.20.1+build.21"
+quilt_loader = "0.20.0-beta.5"
 
 [libraries]
 minecraft = { module = "com.mojang:minecraft", version.ref = "minecraft" }
@@ -10,4 +10,4 @@ quilt_mappings = { module = "org.quiltmc:quilt-mappings", version.ref = "quilt_m
 quilt_loader = { module = "org.quiltmc:quilt-loader", version.ref = "quilt_loader" }
 
 [plugins]
-quilt_loom = { id = "org.quiltmc.loom", version = "1.1.+" }
+quilt_loom = { id = "org.quiltmc.loom", version = "1.2.+" }
