--- a/gradle.properties
+++ b/gradle.properties
@@ -1,8 +1,14 @@
 # Gradle Properties
-org.gradle.jvmargs = -Xmx1G
-org.gradle.parallel = true
+org.gradle.jvmargs=-Xmx1G
+org.gradle.parallel=true
+
+# Fabric Properties
+# check these on https://fabricmc.net/develop
+minecraft_version=1.20.1
+yarn_mappings=1.20.1+build.10
+loader_version=0.15.7
 
 # Mod Properties
-version = 1.1.0
-maven_group = mod.cgytrus
-archives_base_name = slightlybettersplashes
+mod_version=1.2.0
+maven_group=mod.cgytrus
+archives_base_name=slightlybettersplashes
